--- a/index.html
+++ b/index.html
@@ -29,27 +29,42 @@
   
   <section>
     <div class="topdiv">
-     <h1 class="title">TRENDING</h1>
-     <div class="divsection1">
-       <img class="img1" 
-       src="Image/image.png" alt="image"> 
-       <p class="p1on">Dolore magna aliqua</p>
-       <p class="p1">Lorem ipsum dolor sit amet, ipsum labitur lucilius mel id, ad has appareat.</p>  
-    </div><!-- --><div class="divsection2">
+      <h1 class="title">TRENDING</h1>
+      <div class="divsection1">
+        <img class="img1" 
+        src="Image/image.png" alt="image"> 
+        <p class="p1on">Dolore magna aliqua</p>
+        <p class="p1">Lorem ipsum dolor sit amet, ipsum labitur lucilius mel id, ad has appareat.</p>  
+      </div><!-- --><div class="divsection2">
         <div class="img2">
         <img src="Image/3.png" alt="image3"></div>
         <p class="p2on">Morbi eleifend a libero</p>
         <p class="p2"> Lorem ipsum dolor sit amet, ipsum labitur lucilius mel id, ad has appareat.</p>
-    </div><!-- --><div class="divsection3">
+      </div><!-- --><div class="divsection3">
         <div class="img3">
         <img src="Image/photo4.png" alt="image4"></div>
         <p class="p3on">Morbi eleifend a libero</p>
-        <p class="p3"> Lorem ipsum dolor sit amet, ipsum labitur lucilius mel id, ad has appareat.</p>
-
+        <p class="p3"> Lorem ipsum dolor sit amet, ipsum  labitur lucilius mel id, ad has appareat.</p>
+      </div>  
     </div>
+    <div class="botomdiv">
+    <h1 class="h2">HAPPENING NOW</h1>
+     <div class="divsection4">
+       <div class="images2"><img src="Image/image12.png"></div>
+       <p class="p4on">Morbi eleifend a libero</p>
+       <div class="img22"><img src="Image/image-2.png" alt="image-2">
+       </div>
+     </div><!-- 
+     --><div class="verticaldiv2">
+      <div class="photo1">
+        <img src="Image/tom.png" alt="tom">
+      </div>
+      <p class="texton">Morbi eleifend a libero</p>
+      <div class="photo2"><img src="Image/roberto.png"></div>
+       <div class="photo3"><img src="Image/elephant.png"></div>
+     </div>
+     </div>
 
-      
-    </div>
   </section>
    
       		
